# conecto

./: .clang-format  .editorconfig  .gitignore  README.md  clang-format-all.sh  meson.build  meson_options.txt
.github/workflows/: build.yml
data/: com.github.gyan000.eos-connect.appdata.xml.in  com.github.gyan000.eos-connect.desktop.in.in  com.github.hannesschulze.conecto.appdata.xml.in  com.github.hannesschulze.conecto.desktop.in  com.github.hannesschulze.conecto.gresources.xml  com.github.hannesschulze.conecto.gschema.xml  dbus-send.sh  meson.build  send-to.contract
data/css/: fallback.css  style.css
data/test/: telephony-thumbnail-source.b64  telephony-thumbnail-source2.b64  telephony-thumbnail-source3.b64  telephony-thumbnail-source4.b64
data/ui/views/: available-device-view.ui  connected-device-view.ui  empty-selection-view.ui  sms-view.ui  unavailable-device-view.ui
data/ui/views/dock/: connected-device-view.ui  warning-view.ui
data/ui/views/main/: available-device-view.ui  connected-device-view.ui  empty-selection-view.ui  unavailable-device-view.ui
data/ui/widgets/: header-bar.ui  notification-row.ui
docs/: Doxyfile.in  meson.build
libconecto/: abstract-packet-handler.h  backend.cpp  backend.h  communication-channel.cpp  communication-channel.h  conecto.h  config-file.cpp  config-file.h  config.h.in  constants.h.in  crypt.cpp  crypt.h  device.cpp  device.h  discovery.cpp  discovery.h  exceptions.h  meson.build  network-packet.cpp  network-packet.h
libconecto/plugins/: battery.cpp  battery.h  mouse.cpp  mouse.h  notifications.cpp  notifications.h  ping.cpp  ping.h
po/: LINGUAS  POTFILES  com.github.gyan000.eos-connect.pot  fr.po  meson.build  uk.po
src/: application.cpp  application.h  device-popover.cpp  device-popover.h  main.cpp  meson.build  window.cpp  window.h
src/Conecto/: Conecto.vala  Config.vala  Contact.vala  ContactsInterface.vala  Contractor.vala  DebugToolbar.vala  EContacts.vala  MainWindow.vala  Notification.vala  Tools.vala
src/Conecto/Plugin/: Battery.vala  Clipboard.vala  Notification.vala  Ping.vala  PluginInterface.vala  SMS.vala  SMSContact.vala  SMSStore.vala  SMSStoreFactory.vala  SMSStoreInterface.vala  SMSStoreSQLite.vala  SMSStoreTemp.vala  Share.vala  Telephony.vala
src/Conecto/Plugin/Dialogs/: NotificationSettings.vala  ShareFileInfoProgress.vala
src/Conecto/Plugin/Popover/: BatterySettings.vala  SMSNewMessageNewContact.vala  ShareSettings.vala  TelephonySettings.vala
src/Conecto/Plugin/Views/: SMSMessagesView.vala
src/Conecto/Plugin/Widgets/: BatteryPluginListBoxRow.vala  PingPluginListBoxRow.vala  SMSContactListBox.vala  SMSContactListBoxRow.vala  SMSTextEntry.vala  TelephonyPluginListBoxRow.vala
src/Conecto/Plugin/Windows/: SMSHistory.vala
src/Conecto/Views/: DeviceSettingsView.vala  DevicesView.vala  MainSettingsView.vala
src/Conecto/Widgets/: DeviceListActionBarFooter.vala  DeviceListBox.vala  DeviceListBoxRow.vala  DeviceMenuitem.vala  PluginListBox.vala  PluginListBoxRow.vala
src/EOSConnect/: Contractor.vala  DebugToolbar.vala  EContacts.vala  EOSConnect.vala  MainWindow.vala  Notification.vala
src/EOSConnect/Plugin/: Battery.vala  SMSContact.vala  SMSStore.vala  SMSStoreFactory.vala  SMSStoreTemp.vala  Share.vala  Telephony.vala
src/EOSConnect/Plugin/Dialogs/: NotificationSettings.vala  ShareFileInfoProgress.vala
src/EOSConnect/Plugin/Popover/: SMSNewMessageNewContact.vala  ShareSettings.vala
src/EOSConnect/Plugin/Widgets/: BatteryPluginListBoxRow.vala  SMSContactListBox.vala  SMSTextEntry.vala  TelephonyPluginListBoxRow.vala
src/EOSConnect/Plugin/Windows/: SMSHistory.vala
src/EOSConnect/Views/: DeviceSettingsView.vala  DevicesView.vala  MainSettingsView.vala  SMSMessagesView.vala
src/EOSConnect/Widgets/: DeviceListActionBarFooter.vala  DeviceListBoxRow.vala  DeviceMenuitem.vala
src/MConnect/: BatteryHandler.vala  ClipboardHandler.vala  Core.vala  Crypt.vala  DBusNotificationsInterface.vala  Device.vala  DeviceChannel.vala  DeviceManager.vala  DiscoveredDevice.vala  Discovery.vala  DownloadTransfer.vala  IOCopyJob.vala  MConnectThread.vala  Notification.vala  NotificationHandler.vala  NotificationMonitor.vala  Packet.vala  PacketHandlerInterface.vala  PacketHandlers.vala  PingHandler.vala  ShareHandler.vala  ShareHandlerProxy.vala  TelephonyHandler.vala  TransferInterface.vala  TransferManager.vala  UploadTransfer.vala  Utils.vala
src/controllers/: active-device-manager.cpp  active-device-manager.h  dock-item-manager.cpp  dock-item-manager.h  settings-manager.cpp  settings-manager.h
src/models/: available-devices.cpp  available-devices.h  connected-devices.cpp  connected-devices.h  notifications-list.cpp  notifications-list.h  sms-storage.cpp  sms-storage.h  unavailable-devices.cpp  unavailable-devices.h
src/utils/: focus.cpp  focus.h  icons.cpp  icons.h
src/views/: active-device-view.cpp  active-device-view.h  available-device-view.cpp  available-device-view.h  connected-device-view.cpp  connected-device-view.h  devices-list.cpp  devices-list.h  empty-selection-view.cpp  empty-selection-view.h  notifications-view.cpp  notifications-view.h  sms-view.cpp  sms-view.h  unavailable-device-view.cpp  unavailable-device-view.h
src/views/dock/: active-device-view.cpp  active-device-view.h  connected-device-view.cpp  connected-device-view.h  warning-view.cpp  warning-view.h
src/views/main/: active-device-view.cpp  active-device-view.h  available-device-view.cpp  available-device-view.h  connected-device-view.cpp  connected-device-view.h  devices-list.cpp  devices-list.h  empty-selection-view.cpp  empty-selection-view.h  unavailable-device-view.cpp  unavailable-device-view.h
src/widgets/: circular-progress-bar.cpp  circular-progress-bar.h  header-bar.cpp  header-bar.h  notification-row.cpp  notification-row.h  popover-window.cpp  popover-window.h
subprojects/: gtest.wrap
tests/: meson.build  test_main.cpp
tests/libconecto/: meson.build  test_crypt.cpp
