conecto_sources = files(
  'main.cpp',
  'application.cpp',
  'window.cpp',

  'controllers/settings-manager.cpp',
  'controllers/active-device-manager.cpp',

  'models/connected-devices.cpp',
  'models/unavailable-devices.cpp',
  'models/available-devices.cpp',

  'views/devices-list.cpp',
  'views/active-device-view.cpp',
  'views/empty-selection-view.cpp',
  'views/available-device-view.cpp',
  'views/unavailable-device-view.cpp',
  'views/connected-device-view.cpp',

  'widgets/header-bar.cpp',

  'utils/icons.cpp',
)